# CrazyFlie-Control-RL

./: README.md  pyproject.toml
ExpTrajFinv1/: RandomPointAviary.py  TestRandomPointAviary.py  learn.py
ExpTrajFinv1/Trajectoryresultsv7/: evaluations.npz
FinTrajv1/: RandomPointAviaryInit.py  evaluation.py  learn.py
FinTrajv1/Trajectoryresultsv4/: evaluations.npz
FinTrajv2/: RandomPointAviary.py  TestRandomPointAviary.py  evaluation.py  learn.py
FinTrajv2/Trajectoryresultsv5/: evaluations.npz
FinTrajv3/: RandomPointAviary.py  evaluation.py
FinTrajv3/Trajectoryresultsv6/: evaluations.npz
GeneralizaciondePunto/: RandomPointAviary.py  evaluation.py  learn.py
OrdenadorCurro/ExpHoveringFinv1/: RandomPointAviary.py  TestRandomPointAviary.py  evaluation.py  learn.py
PuntoFijo/: HoverAviary.py  evaluation.py  learn.py
SecuenciadePuntos/: TrajectoryAviary.py  evaluation.py  learn.py
SecuenciadePuntosv2/: RandomPointAviary.py  TestRandomPointAviary.py  evaluation.py  learn.py
SecuenciadePuntosv2/Trajectoryresultsv3/: evaluations.npz
TrajCirc/: RandomPointAviary.py  TestRandomPointAviary.py  evaluation.py  learn.py
gym_pybullet_drones/envs/: BaseRLAviary.py  ConstantPerturbation.py  HoverAviary.py  HoverRandomPointAviary.py  ImpactPerturbation.py  RandomPointAviary.py  RepoEx.py  TestRandomPointAviary.py  TestRechazoPert.py  TestRechazoPertGolpe.py  TestRepoEx.py  TrajectoryAviary.py
gym_pybullet_drones/examples/: conversion.py  evaluation.py  learn.py  mostrar_imagenes_lado_a_lado.py  pid.py  repoex.py  timings_0.json  timings_1.json  timings_2.json  (+1 more)
(+74 files in other folders)
