[tool.poetry]
name = "gym-pybullet-drones"
version = "2.0.0"
description = "PyBullet Gym environment for single reinforcement learning of quadcopter control"
authors = ["Pablo Ballesteros Delgado <pablolusb@gmail.com>"]
readme = "pypi_description.md"
repository = "https://github.com/Pxlsko/CrazyFlie-Control-RL"
packages = [
    { include = "gym_pybullet_drones" }
]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24"
scipy = "^1.10"
transforms3d = "^0.4.1"
matplotlib = "^3.7"
pytest = ">=7.3, <9.0"
pybullet = "^3.2.5"
gymnasium = "~=0.28"
stable-baselines3 = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
